# drone-reserve

./: .gitignore  CLAUDE_drone_reserve.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_inventory.ipynb  02_dtm_shootout.ipynb  03_corrected_dtm.ipynb  03_hybrid_dtm.ipynb  04_chm.ipynb  05_segmentation.ipynb  06_tree_detection.ipynb  07_landscape_metrics.ipynb  08_hydrology.ipynb  08b_3d_inundation.ipynb  09_webmap.ipynb  visualize.ipynb
outputs/: README.md
previous/: Abstract_final.docx
reports/: README.md
src/drone_reserve/: __init__.py  chm.py  correction.py  dtm.py  hydro.py  inventory.py  io.py  landmetrics.py  segment.py  treedetect.py  utils.py  viz3d.py  webmap.py
